kube/deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CIRCLE_PROJECT_REPONAME}
  namespace: ${NS}
  annotations:
    sidecar.jaegertracing.io/inject: "${JAEGER_INSTANCE}"
  labels:
    app: ${CIRCLE_PROJECT_REPONAME}
    revision: ${CIRCLE_SHA1}
    build: "${CIRCLE_BUILD_NUM}"
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: ${CIRCLE_PROJECT_REPONAME}
  template:
    metadata:
      labels:
        app: ${CIRCLE_PROJECT_REPONAME}
        revision: ${CIRCLE_SHA1}
        build: "${CIRCLE_BUILD_NUM}"
    spec:
      containers:
        - name: ${CIRCLE_PROJECT_REPONAME}
          image: ${ECR_REGISTRY}/myparcelcom/${IMAGE_NAME}:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          resources:
            requests:
              memory: ${RESOURCES_REQ_MEM}
              cpu: ${RESOURCES_REQ_CPU}
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
