kube/service.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CIRCLE_PROJECT_REPONAME}-svc
  namespace: ${NS}
spec:
  selector:
    app: ${CIRCLE_PROJECT_REPONAME}
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
